<resources>
    <string name="app_name">SignupForm</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="userName">Username:</string>
    <string name="userPrompt">Please enter your username</string>
    <string name="pw">Password:</string>
    <string name="pwPrompt">Please enter your password</string>
    <string name="pwConfirm">Confirm Password:</string>
    <string name="pwConfirmPrompt">Please confirm your password</string>

    <string name="submit">SUBMIT</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string name="nonsense">Bah</string>
</resources>
